--- a/www/index.html
+++ b/www/index.html
@@ -502,35 +502,89 @@
                     <img src="{{((algorithm.thumbnail && algorithm.thumbnail.url) ? algorithm.thumbnail.url : defaultImage)}}"
                         style="height:100% !important; max-height:128px !important; border: 2px solid #0f0 !important;" />
                     <br>
-                    <a style="color:#0F0!important; display:inline-block; width:45%; text-align:right;">Title:</a>&nbsp;
-                    <p id="algorithm_name" style="display:inline-block; width:45%;">{{algorithm.name}}</p>
-                    <br>
-                    <a style="color:#0F0!important; display:inline-block; width:45%; text-align:right;">Author:</a>&nbsp;
-                    <p id="algorithm_author" style="display:inline-block; width:45%;">{{algorithm.owner.name}}</p>
-                    <br>
-                    <a style="color:#0F0!important; display:inline-block; width:45%; text-align:right;">Created:</a>&nbsp;
-                    <p id="algorithm_created" style="display:inline-block; width:45%;">{{getCreated()}}</p>
-                    <br>
-                    <a style="color:#0F0!important; display:inline-block; width:45%; text-align:right;">Edited:</a>&nbsp;
-                    <p id="algorithm_edited" style="display:inline-block; width:45%;">{{getEdited()}}</p>
-                    <br>
-                    <a style="color:#0F0!important; display:inline-block; width:45%; text-align:right;">Views:</a>&nbsp;
-                    <p id="algorithm_views" style="display:inline-block; width:45%;">{{algorithm.views}}</p>
-                    <br>
-                    <a style="color:#0F0!important; display:inline-block; width:45%; text-align:right;">Votes:</a>&nbsp;
-                    <p id="algorithm_vote_total" style="display:inline-block; width:45%;">{{voteTally()}}</p>
-                    <br>
-                    <a style="color:#0F0!important; display:inline-block; width:45%; text-align:right;">Comments:</a>&nbsp;
-                    <p id="algorithm_comment_count" style="display:inline-block; width:45%;">{{algorithm.comments.length}}</p>
-                    <br>
-                    <a style="color:#0F0!important; display:inline-block; width:45%; text-align:right;">Description:</a>&nbsp;
-                    <p id="algorithm_description" style="display:inline-block; width:45%;">{{algorithm.description}}</p>
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+                            <a
+                                style="color:#0F0!important; display:inline-block; width:45%; text-align:right;">Title:</a>&nbsp;
+                        </div>
+                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+                            <p id="algorithm_name" style="display:inline-block; width:45%;">{{algorithm.name}}</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+                            <a
+                                style="color:#0F0!important; display:inline-block; width:45%; text-align:right;">Author:</a>&nbsp;
+                        </div>
+                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+                            <p id="algorithm_author" style="display:inline-block; width:45%;">{{algorithm.owner.name}}
+                            </p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+                            <a
+                                style="color:#0F0!important; display:inline-block; width:45%; text-align:right;">Created:</a>&nbsp;
+                        </div>
+                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+                            <p id="algorithm_created" style="display:inline-block; width:45%;">{{getCreated()}}</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+                            <a
+                                style="color:#0F0!important; display:inline-block; width:45%; text-align:right;">Edited:</a>&nbsp;
+                        </div>
+                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+                            <p id="algorithm_edited" style="display:inline-block; width:45%;">{{getEdited()}}</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+                            <a
+                                style="color:#0F0!important; display:inline-block; width:45%; text-align:right;">Views:</a>&nbsp;
+                        </div>
+                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+                            <p id="algorithm_views" style="display:inline-block; width:45%;">{{algorithm.views}}</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+                            <a
+                                style="color:#0F0!important; display:inline-block; width:45%; text-align:right;">Votes:</a>&nbsp;
+                        </div>
+                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+                            <p id="algorithm_vote_total" style="display:inline-block; width:45%;">{{voteTally()}}</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+                            <a
+                                style="color:#0F0!important; display:inline-block; width:45%; text-align:right;">Comments:</a>&nbsp;
+                        </div>
+                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+                            <p id="algorithm_comment_count" style="display:inline-block; width:45%;">
+                                {{algorithm.comments.length}}</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+                            <a
+                                style="color:#0F0!important; display:inline-block; width:45%; text-align:right;">Description:</a>&nbsp;
+                        </div>
+                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+                            <p id="algorithm_description" style="display:inline-block; width:45%;">
+                                {{algorithm.description}}
+                            </p>
+                        </div>
+                    </div>
                 </h1>
-                
+
                 <h1 onclick="profileClicked(algorithm.owner)" class="editable"
                     style="padding: 18px; text-align:center; color:#fff; font-size: 18px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <label style="display:inline-block; width:45%;">Algorithm Title</label>
-                    <input style="display:inline-block; color:#fff; width: 45%;" placeholder="Algorithm name..." value="{{algorithm.name}}"></input>
+                    <input style="display:inline-block; color:#fff; width: 45%;" placeholder="Algorithm name..."
+                        value="{{algorithm.name}}"></input>
                 </h1>
             </div>
             <div class="col-xs-0 col-sm-1 col-md-2 col-lg-3">
