--- a/www/index.html
+++ b/www/index.html
@@ -505,75 +505,75 @@
                     <div class="row">
                         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
                             <a
-                                style="color:#0F0!important; display:inline-block; width:45%; text-align:right;">Title:</a>&nbsp;
+                                style="color:#0F0!important; ">Title:</a>&nbsp;
                         </div>
                         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-                            <p id="algorithm_name" style="display:inline-block; width:45%;">{{algorithm.name}}</p>
+                            <p id="algorithm_name" style="">{{algorithm.name}}</p>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
                             <a
-                                style="color:#0F0!important; display:inline-block; width:45%; text-align:right;">Author:</a>&nbsp;
+                                style="color:#0F0!important; ">Author:</a>&nbsp;
                         </div>
                         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-                            <p id="algorithm_author" style="display:inline-block; width:45%;">{{algorithm.owner.name}}
+                            <p id="algorithm_author" style="">{{algorithm.owner.name}}
                             </p>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
                             <a
-                                style="color:#0F0!important; display:inline-block; width:45%; text-align:right;">Created:</a>&nbsp;
+                                style="color:#0F0!important; ">Created:</a>&nbsp;
                         </div>
                         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-                            <p id="algorithm_created" style="display:inline-block; width:45%;">{{getCreated()}}</p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-                            <a
-                                style="color:#0F0!important; display:inline-block; width:45%; text-align:right;">Edited:</a>&nbsp;
-                        </div>
-                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-                            <p id="algorithm_edited" style="display:inline-block; width:45%;">{{getEdited()}}</p>
+                            <p id="algorithm_created" style="">{{getCreated()}}</p>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
                             <a
-                                style="color:#0F0!important; display:inline-block; width:45%; text-align:right;">Views:</a>&nbsp;
+                                style="color:#0F0!important; ">Edited:</a>&nbsp;
                         </div>
                         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-                            <p id="algorithm_views" style="display:inline-block; width:45%;">{{algorithm.views}}</p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-                            <a
-                                style="color:#0F0!important; display:inline-block; width:45%; text-align:right;">Votes:</a>&nbsp;
-                        </div>
-                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-                            <p id="algorithm_vote_total" style="display:inline-block; width:45%;">{{voteTally()}}</p>
+                            <p id="algorithm_edited" style="">{{getEdited()}}</p>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
                             <a
-                                style="color:#0F0!important; display:inline-block; width:45%; text-align:right;">Comments:</a>&nbsp;
+                                style="color:#0F0!important; ">Views:</a>&nbsp;
                         </div>
                         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-                            <p id="algorithm_comment_count" style="display:inline-block; width:45%;">
+                            <p id="algorithm_views" style="">{{algorithm.views}}</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+                            <a
+                                style="color:#0F0!important; ">Votes:</a>&nbsp;
+                        </div>
+                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+                            <p id="algorithm_vote_total" style="">{{voteTally()}}</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+                            <a
+                                style="color:#0F0!important; ">Comments:</a>&nbsp;
+                        </div>
+                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+                            <p id="algorithm_comment_count" style="">
                                 {{algorithm.comments.length}}</p>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
                             <a
-                                style="color:#0F0!important; display:inline-block; width:45%; text-align:right;">Description:</a>&nbsp;
+                                style="color:#0F0!important; ">Description:</a>&nbsp;
                         </div>
                         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-                            <p id="algorithm_description" style="display:inline-block; width:45%;">
+                            <p id="algorithm_description" style="">
                                 {{algorithm.description}}
                             </p>
                         </div>
