--- a/www/index.html
+++ b/www/index.html
@@ -577,7 +577,7 @@
 
                     <div class="row">
                         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-                            <label style="">Algorithm Title</label>
+                            <a style="">Algorithm Title</a>
                         </div>
                         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
                             <input style="text-align:center; color:#fff;" placeholder="Algorithm name..."
