--- a/www/index.html
+++ b/www/index.html
@@ -576,7 +576,7 @@
                     style="padding: 18px; text-align:center; color:#fff; font-size: 18px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
 
                     <div class="row">
-                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6" style="align-self: center;">
                             <a style="">Algorithm Title</a>
                         </div>
                         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
