--- a/www/index.html
+++ b/www/index.html
@@ -572,7 +572,7 @@
                     </div>
                 </h1>
 
-                <h1 onclick="profileClicked(algorithm.owner)" class="editable"
+                <h1 class="editable"
                     style="padding: 18px; text-align:center; color:#fff; font-size: 18px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
 
                     <div class="row">
