--- a/www/index.html
+++ b/www/index.html
@@ -584,6 +584,15 @@
                                 value="{{algorithm.name}}"></input>
                         </div>
                     </div>
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6" style="align-self: center;">
+                            <a>Algorithm Description</a>
+                        </div>
+                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+                            <input style="text-align:center; color:#fff;" placeholder="Enter description here..."
+                                value="{{algorithm.description}}"></input>
+                        </div>
+                    </div>
                 </h1>
             </div>
             <div class="col-xs-0 col-sm-1 col-md-2 col-lg-3">
