--- a/www/index.html
+++ b/www/index.html
@@ -585,11 +585,13 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6" style="align-self: center;">
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="align-self: center;">
                             <a>Algorithm Description</a>
                         </div>
+                    </div>
+                    <div class="row">
                         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-                            <input style="text-align:center; color:#fff;" placeholder="Enter description here..."
+                            <textarea id="comment" rows="8" style="text-align:center; color:#fff;" placeholder="Enter description here..."
                                 value="{{algorithm.description}}"></input>
                         </div>
                     </div>
