--- a/www/index.html
+++ b/www/index.html
@@ -592,7 +592,7 @@
                     <div class="row">
                         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
                             <textarea id="comment" rows="8" style="text-align:center; color:#fff;" placeholder="Enter description here..."
-                                value="{{algorithm.description}}"></input>
+                                value="{{algorithm.description}}"></textarea>
                         </div>
                     </div>
                 </h1>
