--- a/www/index.html
+++ b/www/index.html
@@ -585,8 +585,10 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="align-self: center;">
+                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
                             <a>Algorithm Description</a>
+                        </div>
+                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
                         </div>
                     </div>
                     <div class="row">
