--- a/www/index.html
+++ b/www/index.html
@@ -579,23 +579,27 @@
                         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6" style="align-self: center;">
                             <a>Algorithm Title</a>
                             <br>
+                            <br>
                         </div>
                         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
                             <input style="text-align:center; color:#fff;" placeholder="Algorithm name..."
                                 value="{{algorithm.name}}"></input>
                         </div>
                     </div>
+                    <br>
                     <div class="row">
                         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
                             <a>Algorithm Description</a>
+                            <br>
                             <br>
                         </div>
                         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
                         </div>
                     </div>
+                    <br>
                     <div class="row">
                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                            <textarea id="comment" rows="8" style="text-align:center; color:#fff;" placeholder="Enter description here..."
+                            <textarea id="comment" rows="8" style="text-align:left; color:#fff;" placeholder="Enter description here..."
                                 value="{{algorithm.description}}"></textarea>
                         </div>
                     </div>
