--- a/www/index.html
+++ b/www/index.html
@@ -604,6 +604,13 @@
                                 value="{{algorithm.description}}"></textarea>
                         </div>
                     </div>
+                    <div class="row">
+                        <div class="checkbox">
+                            <input style="float:right;" id="public_checkbox" type="checkbox" [(ngModel)]="algorithm.public"
+                                value="">
+                            <label for="public_checkbox">&nbsp;&nbsp;&nbsp;Public</label>
+                        </div>
+                    </div>
                 </h1>
             </div>
             <div class="col-xs-0 col-sm-1 col-md-2 col-lg-3">
