--- a/www/index.html
+++ b/www/index.html
@@ -605,10 +605,13 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="checkbox">
-                            <label for="public_checkbox">&nbsp;&nbsp;&nbsp;Public</label>
+                        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                            <a>Public</a>
+                        </div>
+                        <div class="checkbox col-xs-6 col-sm-6 col-md-6 col-lg-6">
                             <input style="float:right;" id="public_checkbox" type="checkbox" [(ngModel)]="algorithm.public"
                                 value="">
+                            <label for="public_checkbox"></label>
                         </div>
                     </div>
                 </h1>
