--- a/www/index.html
+++ b/www/index.html
@@ -605,7 +605,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" style="align-self: center;">
                             <a>Public</a>
                         </div>
                         <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
