--- a/www/index.html
+++ b/www/index.html
@@ -605,10 +605,10 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" style="align-self: center;">
+                        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end;">
                             <a>Public</a>
                         </div>
-                        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" style="text-align: center;">
                             <div class="checkbox">
                                 <input style="float:right;" id="public_checkbox" type="checkbox"
                                     [(ngModel)]="algorithm.public" value="">
