--- a/www/index.html
+++ b/www/index.html
@@ -608,12 +608,15 @@
                         <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end;">
                             <a>Public</a>
                         </div>
-                        <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="text-align: center;">
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
                             <div class="checkbox">
-                                <input style="float:right;" id="public_checkbox" type="checkbox"
-                                    [(ngModel)]="algorithm.public" value="">
+                                <input style="float:right;" id="public_checkbox" type="checkbox" value="">
                                 <label for="public_checkbox"></label>
                             </div>
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
                         </div>
                     </div>
                 </h1>
