--- a/www/index.html
+++ b/www/index.html
@@ -604,6 +604,7 @@
                                 placeholder="Enter description here..." value="{{algorithm.description}}"></textarea>
                         </div>
                     </div>
+                    <br>
                     <div class="row">
                         <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end;">
                             <a>Public</a>
@@ -614,6 +615,22 @@
                             <div class="checkbox">
                                 <input style="float:right;" id="public_checkbox" type="checkbox" value="">
                                 <label for="public_checkbox"></label>
+                            </div>
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                        </div>
+                    </div>
+                    <br>
+                    <div class="row">
+                        <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end;">
+                            <a>HTML</a>
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                            <div class="checkbox">
+                                <input style="float:right;" id="html_checkbox" type="checkbox" value="">
+                                <label for="html_checkbox"></label>
                             </div>
                         </div>
                         <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
