--- a/www/index.html
+++ b/www/index.html
@@ -1783,7 +1783,7 @@
         window.onload = function () {
             load_tree()
         }
-        window.html_editor = CodeMirror.fromTextArea(window.getElementById("algorithm_html"), {
+        window.html_editor = CodeMirror.fromTextArea(doocument.getElementById("algorithm_html"), {
             mode: "x-shader/x-fragment",
             lineNumbers:false,
             theme: "the-matrix",
