--- a/www/index.html
+++ b/www/index.html
@@ -638,7 +638,7 @@
                     </div>
                     <div class="row">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-                            <textarea id="algorithm_html" rows="8" style="text-align:left; color:#fff;"
+                            <textarea id="algorithm_html" rows="8" style="text-align:left; border: 1px solid #0F0;"
                                 placeholder="Enter html here..." value="{{algorithm.html}}"></textarea>
                         </div>
                     </div>
