--- a/www/index.html
+++ b/www/index.html
@@ -1788,7 +1788,12 @@
             lineNumbers:false,
             theme: "the-matrix",
             autoRefresh:true,
-            lineWrapping: true
+            lineWrapping: true,
+            value:            
+`void main(){
+  float cat = sin(1.0f+time);
+  gl_FragColor = vec4(cat);
+}`
         });
     </script>
 </body>
