--- a/www/index.html
+++ b/www/index.html
@@ -1790,7 +1790,7 @@
             autoRefresh:true,
             lineWrapping: true
         });
-        window.html_editor.set_value(
+        window.html_editor.setValue(
 `void main(){
   float cat = sin(1.0f+time);
   gl_FragColor = vec4(cat);
