--- a/www/index.html
+++ b/www/index.html
@@ -1044,7 +1044,7 @@
                         page != pages.CLIENT_ERROR &&
                         page != pages.SERVER_ERROR &&
                         page != pages.HOME &&
-                        page != pages.EDIT &&
+                        // page != pages.EDIT &&
                         page != pages.QUERY &&
                         page != pages.CREATE_QUERY &&
                         page != pages.DELETE_ACCOUNT &&
